--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "serve": "webpack serve",
+    "start": "node ./server/app.js",
+    "dev": "webpack --watch | nodemon ./server/app.js "
   },
   "repository": {
     "type": "git",
@@ -35,9 +37,14 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3"
+    "webpack-dev-server": "^4.9.3",
+    "nodemon": "^2.0.19"
   },
   "dependencies": {
-    "core-js": "^3.23.5"
+    "core-js": "^3.23.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.3"
   }
 }
