--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,4 @@ jobs:
             git pull
             npm install
             npm run build
-            npm run start
+            nohup node ./server/app.js &
