--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,4 @@ jobs:
             git pull
             npm install
             npm run build
-            nohup node ./server/app.js &
-            exit
+            pm2 reload ./server/app.js
